added 6 more list items (homework 1-7 is now done on the page)

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 <body>
 <ul>
   <li>Homework 1</li>
+  <li>Homework 2</li>
+  <li>Homework 3</li>
+  <li>Homework 4</li>
+  <li>Homework 5</li>
+  <li>Homework 6</li>
+  <li>Homework 7</li>
 </ul>
 </body>
 </html>
