--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 </head>
 <body>
   <h1>Jen Cheng at FEWD!</h1>
-  <img src="me.jpg" alt="" />
+  <img src="me.jpg" alt="me" />
+
+  <h2>List of Homework assignments</h2>
 <ul>
   <li>Homework 1</li>
   <li>Homework 2</li>
