--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 
   <h2>List of Homework assignments</h2>
 <ul>
-  <li>Homework 1</li>
-  <li>Homework 2</li>
-  <li>Homework 3</li>
-  <li>Homework 4</li>
-  <li>Homework 5</li>
-  <li>Homework 6</li>
-  <li>Homework 7</li>
+  <li><a href="">Homework 1</a></li>
+  <li><a href="">Homework 2</a></li>
+  <li><a href="">Homework 3</a></li>
+  <li><a href="">Homework 4</a></li>
+  <li><a href="">Homework 5</a></li>
+  <li><a href="">Homework 6</a></li>
+  <li><a href="">Homework 7</a></li>
 </ul>
 </body>
 </html>
