--- a/homework_1/Wendy_Bite.html
+++ b/homework_1/Wendy_Bite.html
@@ -6,8 +6,8 @@
 	</head>
 	<body>
 		<h1><center>Wendy G. Bite</center></h1>
-		<a href="#"><strong>About me</strong></a>
-		<a href="#"><strong>Resume</strong></a>
+		<a href="#"><center><strong>About me</strong></center></a>
+		<a href="#"><center><strong>Resume</strong></center></a>
 		<br>
 		<h3>About Me</h3>
 		<p><img src="Betty-White.jpg" alt="Betty White" style = "float: right;">
