--- a/homework_1/Wendy_Bite.html
+++ b/homework_1/Wendy_Bite.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<h1><center>Wendy G. Bite</center></h1>
-		<a href="#"><center><strong>About me</strong></center></a>
+		<a href="#"><center><strong>About Me</strong></center></a>
 		<a href="#"><center><strong>Resume</strong></center></a>
 		<br>
 		<h3>About Me</h3>
