--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <h2>List of Homework assignments</h2>
 <ul>
-  <li><a href="">Homework 1</a></li>
+  <li><a href="homework_1/Wendy_Bite.html">Homework 1</a></li>
   <li><a href="">Homework 2</a></li>
   <li><a href="">Homework 3</a></li>
   <li><a href="">Homework 4</a></li>
