--- a/homework_1/Wendy_Bite.html
+++ b/homework_1/Wendy_Bite.html
@@ -6,9 +6,9 @@
 	</head>
 	<body>
 		<h1><center>Wendy G. Bite</center></h1>
-		<h6><a href="Wendy_Bite.html"><center><strong>About Me</strong></center></a>
+		<a href="Wendy_Bite.html"><center><strong>About Me</strong></center></a>
 		<a href="Wendy_Resume.html"><center><strong>Resume</strong></center></a>
-	</h6><br>
+<br>
 		<h3>About Me</h3>
 		<p><img src="Betty-White.jpg" alt="Betty White" style = "float: right;">
 		The series revolves around four older, single women (three widows and one divorcée) sharing a house in Miami, Florida. The owner of the house is a widow named Blanche Devereaux (Rue McClanahan), who was joined by fellow widow Rose Nylund (Betty White) and divorcée Dorothy Zbornak (Bea Arthur). They both responded to a room-for-rent ad on the bulletin board of a local grocery store. In the pilot episode, the women had a gay cook named Coco (Charles Levin), who was subsequently removed.[5] The three were soon joined by Dorothy's mother, Sophia Petrillo (Estelle Getty), after the retirement home where she lived, Shady Pines, burned down.
