--- a/homework_1/Wendy_Bite.html
+++ b/homework_1/Wendy_Bite.html
@@ -6,8 +6,8 @@
 	</head>
 	<body>
 		<h1><center>Wendy G. Bite</center></h1>
-		<a href="Wendy_Bite.html"><center><strong>About Me</strong></center></a>
-		<a href="Wendy_Resume.html"><center><strong>Resume</strong></center></a>
+		<a href="Wendy_Bite.html"><span><center><strong>About Me</strong></center></span></a>
+		<a href="Wendy_Resume.html"><span><center><strong>Resume</strong></center></span></a>
 <br>
 		<h3>About Me</h3>
 		<p><img src="Betty-White.jpg" alt="Betty White" style = "float: right;">
