--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <h1>Jen Cheng at FEWD!</h1>
   <img src="me.jpg" alt="me" />
 
-  <h2>List of Homework assignments</h2>
+  <h2>List of Homework Assignments</h2>
 <ul>
   <li><a href="homework_1/Wendy_Bite.html">Homework 1</a></li>
   <li><a href="">Homework 2</a></li>
@@ -17,6 +17,16 @@
   <li><a href="">Homework 5</a></li>
   <li><a href="">Homework 6</a></li>
   <li><a href="">Homework 7</a></li>
+</ul>
+  <h2>List of Classwork Assignments</h2>
+<ul>
+  <li><a href="class_exercise/cookies/cookies.html">Classwork 1</a></li>
+  <li><a href="">Classwork 2</a></li>
+  <li><a href="">Classwork 3</a></li>
+  <li><a href="">Classwork 4</a></li>
+  <li><a href="">Classwork 5</a></li>
+  <li><a href="">Classwork 6</a></li>
+  <li><a href="">Classwork 7</a></li>
 </ul>
 </body>
 </html>
