--- a/homework_1/Wendy_Bite.html
+++ b/homework_1/Wendy_Bite.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<h1><center>Wendy G. Bite</center></h1>
-		<a href="Wendy_Bite.html"><span><center><strong>About Me</strong></center></span></a>
+		<a href="Wendy_Bite.html"><span><center><strong>About Me |</strong></center></span></a>
 		<a href="Wendy_Resume.html"><span><center><strong>Resume</strong></center></span></a>
 <br>
 		<h3>About Me</h3>
