--- a/homework_1/Wendy_Bite.html
+++ b/homework_1/Wendy_Bite.html
@@ -6,8 +6,8 @@
 	</head>
 	<body>
 		<h1><center>Wendy G. Bite</center></h1>
-		<a href="Wendy_Bite.html"><span><center><strong>About Me |</strong></center></span></a>
-		<a href="Wendy_Resume.html"><span><center><strong>Resume</strong></center></span></a>
+		<center><strong>About Me | </strong></center></a>
+		<a href="Wendy_Resume.html"><center><strong>Resume</strong></center></a>
 <br>
 		<h3>About Me</h3>
 		<p><img src="Betty-White.jpg" alt="Betty White" style = "float: right;">
@@ -16,10 +16,14 @@
 		Thank You for being a friend. Travel down a road and back again. Your heart is true, you're a pal and a confidante.And if you threw a party, invited everyone you knew, you would see the biggest gift would be from me and the card attached would say, Thank You For Being a Friend!
 		<br>
 		<br>
+		<footer>
 		<a href="">Facebook</a>
+		|
 		<a href="">Twitter</a>
+		|
 		<a href="">Instagram</a>
+		|
 		<a href="">LinkedIN</a>
-
+		</footer>
 	</body>
 </html>
