--- a/homework_1/Wendy_Bite.html
+++ b/homework_1/Wendy_Bite.html
@@ -3,11 +3,18 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Wendy G. Bite</title>
+		<link rel="stylesheet" href="/css/master.css" media="screen" title="no title" charset="utf-8">
+		<style>
+			body{
+				background-color: grey;
+				color: white;
+			}
+		</style>
 	</head>
 	<body>
 		<h1><center>Wendy G. Bite</center></h1>
-		<center><strong>About Me | </strong></center></a>
-		<a href="Wendy_Resume.html"><center><strong>Resume</strong></center></a>
+		<strong>About Me | </strong>
+		<a href="Wendy_Resume.html">Resume</a>
 <br>
 		<h3>About Me</h3>
 		<p><img src="Betty-White.jpg" alt="Betty White" style = "float: right;">
