--- a/homework_1/Wendy_Bite.html
+++ b/homework_1/Wendy_Bite.html
@@ -9,13 +9,23 @@
 				background-color: grey;
 				color: white;
 			}
+			.container{
+				border:#CCCCCC 4px solid;
+				width: 600px;
+			}
+
 		</style>
 	</head>
-	<body>
-		<h1><center>Wendy G. Bite</center></h1>
-		<strong>About Me | </strong>
-		<a href="Wendy_Resume.html">Resume</a>
-<br>
+<body>
+	<div>
+		<h1>Wendy G. Bite</h1>
+		<div class="container">
+			<strong>About Me | </strong>
+			<a href="Wendy_Resume.html">Resume</a>
+		</div>
+
+		<div></div>
+
 		<h3>About Me</h3>
 		<p><img src="Betty-White.jpg" alt="Betty White" style = "float: right;">
 		The series revolves around four older, single women (three widows and one divorcée) sharing a house in Miami, Florida. The owner of the house is a widow named Blanche Devereaux (Rue McClanahan), who was joined by fellow widow Rose Nylund (Betty White) and divorcée Dorothy Zbornak (Bea Arthur). They both responded to a room-for-rent ad on the bulletin board of a local grocery store. In the pilot episode, the women had a gay cook named Coco (Charles Levin), who was subsequently removed.[5] The three were soon joined by Dorothy's mother, Sophia Petrillo (Estelle Getty), after the retirement home where she lived, Shady Pines, burned down.
@@ -32,5 +42,6 @@
 		|
 		<a href="">LinkedIN</a>
 		</footer>
+</div>
 	</body>
 </html>
