--- a/homework_1/Wendy_Bite.html
+++ b/homework_1/Wendy_Bite.html
@@ -26,16 +26,17 @@
 			<a href="Wendy_Resume.html">Resume</a>
 		</div>
 
-		<div></div>
+		<div class="divider"></div>
 
-		<h3>About Me</h3>
+		<h2>About Me</h2>
 		<p><img src="Betty-White.jpg" alt="Betty White" style = "float: right;">
 		The series revolves around four older, single women (three widows and one divorcée) sharing a house in Miami, Florida. The owner of the house is a widow named Blanche Devereaux (Rue McClanahan), who was joined by fellow widow Rose Nylund (Betty White) and divorcée Dorothy Zbornak (Bea Arthur). They both responded to a room-for-rent ad on the bulletin board of a local grocery store. In the pilot episode, the women had a gay cook named Coco (Charles Levin), who was subsequently removed.[5] The three were soon joined by Dorothy's mother, Sophia Petrillo (Estelle Getty), after the retirement home where she lived, Shady Pines, burned down.
 		</p>
 		Thank You for being a friend. Travel down a road and back again. Your heart is true, you're a pal and a confidante.And if you threw a party, invited everyone you knew, you would see the biggest gift would be from me and the card attached would say, Thank You For Being a Friend!
-		<br>
-		<br>
-		<footer>
+		<div class="divider">
+
+		</div>
+
 		<a href="">Facebook</a>
 		|
 		<a href="">Twitter</a>
@@ -43,7 +44,7 @@
 		<a href="">Instagram</a>
 		|
 		<a href="">LinkedIN</a>
-		</footer>
-</div>
+
+		</div>
 	</body>
 </html>
