--- a/homework_1/Wendy_Bite.html
+++ b/homework_1/Wendy_Bite.html
@@ -3,25 +3,14 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Wendy G. Bite</title>
-		<link rel="stylesheet" href="/css/master.css" media="screen" title="no title" charset="utf-8">
-		<style>
-			body{
-				background-color: grey;
-				color: white;
-			}
-			.container{
-				border:#CCCCCC 4px solid;
-				width: 600px;
-				padding: 40px;
-				margin: 20px auto;
-			}
-
-		</style>
+		<link rel="stylesheet" href="style.css" media="screen" title="no title" charset="utf-8">
 	</head>
 <body>
+
 	<div class="container">
 		<h1>Wendy G. Bite</h1>
-		<div>
+
+		<div class="txt-center">
 			<strong>About Me | </strong>
 			<a href="Wendy_Resume.html">Resume</a>
 		</div>
@@ -29,22 +18,25 @@
 		<div class="divider"></div>
 
 		<h2>About Me</h2>
-		<p><img src="Betty-White.jpg" alt="Betty White" style = "float: right;">
-		The series revolves around four older, single women (three widows and one divorcée) sharing a house in Miami, Florida. The owner of the house is a widow named Blanche Devereaux (Rue McClanahan), who was joined by fellow widow Rose Nylund (Betty White) and divorcée Dorothy Zbornak (Bea Arthur). They both responded to a room-for-rent ad on the bulletin board of a local grocery store. In the pilot episode, the women had a gay cook named Coco (Charles Levin), who was subsequently removed.[5] The three were soon joined by Dorothy's mother, Sophia Petrillo (Estelle Getty), after the retirement home where she lived, Shady Pines, burned down.
+		<p>
+			<img src="Betty-White.jpg" alt="Betty White" />
+			The series revolves around four older, single women (three widows and one divorcée) sharing a house in Miami, Florida. The owner of the house is a widow named Blanche Devereaux (Rue McClanahan), who was joined by fellow widow Rose Nylund (Betty White) and divorcée Dorothy Zbornak (Bea Arthur). They both responded to a room-for-rent ad on the bulletin board of a local grocery store. In the pilot episode, the women had a gay cook named Coco (Charles Levin), who was subsequently removed.[5] The three were soon joined by Dorothy's mother, Sophia Petrillo (Estelle Getty), after the retirement home where she lived, Shady Pines, burned down.
 		</p>
-		Thank You for being a friend. Travel down a road and back again. Your heart is true, you're a pal and a confidante.And if you threw a party, invited everyone you knew, you would see the biggest gift would be from me and the card attached would say, Thank You For Being a Friend!
-		<div class="divider">
+
+		<p>
+			Thank You for being a friend. Travel down a road and back again. Your heart is true, you're a pal and a confidante.And if you threw a party, invited everyone you knew, you would see the biggest gift would be from me and the card attached would say, Thank You For Being a Friend!
+		</p>
+
+		<div class="divider"></div>
+
+		<div class="txt-center">
+
+			<a href="">Facebook</a> |
+			<a href="">Twitter</a> |
+			<a href="">Instagram</a> |
+			<a href="">LinkedIN</a>
 
 		</div>
-
-		<a href="">Facebook</a>
-		|
-		<a href="">Twitter</a>
-		|
-		<a href="">Instagram</a>
-		|
-		<a href="">LinkedIN</a>
-
 		</div>
 	</body>
 </html>
