--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
   <meta charset="utf-8">
   <title>My Portfolio</title>
+  <link rel="stylesheet" href="style.css" media="screen" title="no title" charset="utf-8">
 </head>
 <body>
   <h1>Jen Cheng at FEWD!</h1>
   <img src="me.jpg" alt="me" />
+<div class="assignments">
 
-  <h2>List of Homework Assignments</h2>
+ <h2>List of Homework Assignments</h2>
 <ul>
   <li><a href="homework_1/Wendy_Bite.html">Homework 1</a></li>
   <li><a href="">Homework 2</a></li>
@@ -18,7 +20,7 @@
   <li><a href="">Homework 6</a></li>
   <li><a href="">Homework 7</a></li>
 </ul>
-<hr>
+<div class="divider"></div>
   <h2>List of Classwork Assignments</h2>
 <ul>
   <li><a href="class_exercise/cookies/cookies.html">Classwork 1</a></li>
@@ -29,5 +31,6 @@
   <li><a href="">Classwork 6</a></li>
   <li><a href="">Classwork 7</a></li>
 </ul>
+</div>
 </body>
 </html>
