--- a/homework_1/Wendy_Resume.html
+++ b/homework_1/Wendy_Resume.html
@@ -1,45 +1,104 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<title>RESUME PAGE</title>
-	</head>
-	<body>
-		<h3>Resume</h3>
-		<p>
-			I recently graduated from a Web Development course at General Assembly where I increased my typing speed from 10 words per minute on my type writer to 100 words per minute on my new MacBook Pro. They also taught me how to be an <strong>awesome</strong> Web Developer. During my spare time, I enjoy senior water aerobics, pickling, and spending time with my great grand children.
-		</p>
-		<h4>RELEVANT EXPERIENCE</h4>
-			<ul>
-				<li> <strong>Web Developer,</strong> <strong>GitHub</strong> 2013 - present
-					<br>Building a user friendly interface that is easy for beginner programmers to use and learn the benefits of git.
-				</li>
-				<p></p>
-			<li> <strong>Copy Editor, </strong>
-				<strong>Complaint.ly</strong> 2012 - 2013
-				<br>Reviewed, organize and filed multiple complaints to neighbors, local stores, and government officials. (self employed)
-			</li>
-				<p></p>
-			<li><strong>Master Knitter, Christmas Sweater Org</strong> 1992 – 2011
-				<br>Created delightful christmas sweaters for young boys and girls. Extremly gifted at weaving green, red and gold thread.
-				<br>
-			</li>
-			<p></p>
-			<li><strong>Senior Vice President, The Golden Girls Appreciation Society</strong> 1985 - 1992
-				<br>Managed a team of three and over saw day to day operations at The Golden Girls Retirement Facility in Miami.
-				<br>
-			</li>
-			<p></p>
-			<li><strong>Certified Mint Candy and Freshly Baked Cookies Distributor.</strong> 1960S
-				<br>Won multiple awards for my secret chocolate chip recipies. My grand children enjoy them too :)
-				<br>
-			</li>
-		</ul>
-		<h3>Education</h3>
-		<ul>
-			<li><strong>General Assembly</strong> WDI — 2013</li>
-		<li><strong>Queens College</strong> &mdash; B.A. 1923</li>
-		<li><strong>Brooklyn Etiquette School For Girls</strong> &mdash; 1920(Honors)</li>
+<head>
+	<title>Resume</title>
+		<link rel="stylesheet" href="style.css" media="screen" title="no title" charset="utf-8">
+</head>
+<body>
+
+<div class="container">
+	<h1>Wendy G. Bite</h1>
+
+	<div class="txt-center">
+		<a href="Wendy_Bite.html">About Me</a> |
+		<strong >Resume</strong>
+	</div>
+
+	<div class="divider"></div>
+
+	<h2 class="sans-serif">Resume</h2>
+
+	<p>
+		I recently graduated from a Web Development course at General Assembly where I increased my typing speed from 10 words per minute on my type writer to 100 words per minute on my new MacBook Pro. They also taught me how to be an <strong>awesome</strong>Web Developer. During my spare time, I enjoy senior water aerobics, pickling, and spending time with my great grand children.
+	</p>
+
+	<h3 class="muted">RELEVANT EXPERIENCE</h3>
+
+	<ul>
+		<li>
+			<div>
+				<strong>Web Developer</strong>
+				<span>, GitHub</span>
+				<small class="muted">2013 - Present</small>
+			</div>
+			<div class="muted experience">
+				Building a user friendly interface that is easy for beginner programmers to use and learn the benefits of git.
+			</div>
+		</li>
+		<li>
+			<div>
+				<strong>Copy Editor</strong>
+				<span>, Complaint.ly</span>
+				<small class="muted">2012 - 2013</small>
+			</div>
+			<div class="muted experience">
+				Reviewed, organize and filed multiple complaints to neighbors, local stores, and government officials. (self employed)
+			</div>
+		</li>
+		<li>
+			<div>
+				<strong>Master Knitter</strong>
+				<span>, Christmas Sweater Org</span>
+				<small class="muted">1992 - 2011</small>
+			</div>
+			<div class="muted experience">
+				Created delightful christmas sweaters for young boys and girls. Extremly gifted at weaving green, red and gold thread.
+			</div>
+		</li>
+		<li>
+			<div>
+				<strong>Senior Vice President</strong>
+				<span>, The Golden Girls Appreciation Society</span>
+				<small class="muted">1985 - 1992</small>
+			</div>
+			<div class="muted experience">
+				Managed a team of three and over saw day to day operations at The Golden Girls Retirement Facility in Miami.
+			</div>
+		</li>
+		<li>
+			<div>
+				<strong>Certified Mint Candy and Freshly Baked Cookies Distributor.</strong>
+				<small class="muted">1960</small>
+			</div>
+			<div class="muted experience">
+				Won multiple awards for my secret chocolate chip recipies. My grand children enjoy them too :)
+			</div>
+		</li>
 	</ul>
-	</body>
+
+	<h3 class="muted">EDUCATION</h3>
+
+	<ul>
+		<li>
+			<strong>General Assembly</strong> WDI - 2013
+		</li>
+		<li>
+			<strong>Queen's College</strong> B.A. - 1923
+		</li>
+		<li>
+			<strong>Brooklyn Etiquette School for Boys</strong> - 1920(Honors)
+		</li>
+	</ul>
+
+	<div class="divider"></div>
+
+	<div class="txt-center">
+		<a href="#">Facebook</a> |
+		<a href="#">Twitter</a> |
+		<a href="#">Instagram</a> |
+		<a href="#">LinkedIN</a>
+	</div>
+</div>
+
+</body>
 </html>
