--- a/index.html
+++ b/index.html
@@ -6,31 +6,32 @@
   <link rel="stylesheet" href="style.css" media="screen" title="no title" charset="utf-8">
 </head>
 <body>
-  <h1>Jen Cheng at FEWD!</h1>
-  <img src="me.jpg" alt="me" />
-<div class="assignments">
-
- <h2>List of Homework Assignments</h2>
-<ul>
-  <li><a href="homework_1/Wendy_Bite.html">Homework 1</a></li>
-  <li><a href="">Homework 2</a></li>
-  <li><a href="">Homework 3</a></li>
-  <li><a href="">Homework 4</a></li>
-  <li><a href="">Homework 5</a></li>
-  <li><a href="">Homework 6</a></li>
-  <li><a href="">Homework 7</a></li>
-</ul>
-<div class="divider"></div>
-  <h2>List of Classwork Assignments</h2>
-<ul>
-  <li><a href="class_exercise/cookies/cookies.html">Classwork 1</a></li>
-  <li><a href="">Classwork 2</a></li>
-  <li><a href="">Classwork 3</a></li>
-  <li><a href="">Classwork 4</a></li>
-  <li><a href="">Classwork 5</a></li>
-  <li><a href="">Classwork 6</a></li>
-  <li><a href="">Classwork 7</a></li>
-</ul>
-</div>
+  <div class="container">
+    <h1>Jen Cheng at FEWD!</h1>
+    <img src="me.jpg" alt="me" />
+  <div class="assignments">
+   <h2>List of Homework Assignments</h2>
+  <ul>
+    <li><a href="homework_1/Wendy_Bite.html">Homework 1</a></li>
+    <li><a href="">Homework 2</a></li>
+    <li><a href="">Homework 3</a></li>
+    <li><a href="">Homework 4</a></li>
+    <li><a href="">Homework 5</a></li>
+    <li><a href="">Homework 6</a></li>
+    <li><a href="">Homework 7</a></li>
+  </ul>
+  <div class="divider"></div>
+    <h2>List of Classwork Assignments</h2>
+  <ul>
+    <li><a href="class_exercise/cookies/cookies.html">Classwork 1</a></li>
+    <li><a href="">Classwork 2</a></li>
+    <li><a href="">Classwork 3</a></li>
+    <li><a href="">Classwork 4</a></li>
+    <li><a href="">Classwork 5</a></li>
+    <li><a href="">Classwork 6</a></li>
+    <li><a href="">Classwork 7</a></li>
+  </ul>
+  </div>
+  </div>
 </body>
 </html>
