--- a/grid_code_along/index.html
+++ b/grid_code_along/index.html
@@ -13,6 +13,15 @@
     <div class="col-6">
       hey
     </div>
+    <div class="col-4">
+      hi
+    </div>
+    <div class="col-4">
+      hi
+    </div>
+    <div class="col-4">
+      hi
+    </div>
   </div>
 </body>
 </html>
