--- a/homework_2/hw2.html
+++ b/homework_2/hw2.html
@@ -3,6 +3,8 @@
 <head>
   <link rel="stylesheet" href="style.css" media="screen" title="no title" charset="utf-8">
   <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Fjalla+One' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
   <title>Sartre's List</title>
 </head>
@@ -59,7 +61,8 @@
       <div class="ad">
       <span>Ad</span>
     </div>
-    <br><br><hr>
+    <br>
+    <hr>
     </p>
 
     <div  class="about">Popular Posts</div>
