--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <ul>
     <li><a href="class_exercise/cookies/cookies.html">Classwork 1</a></li>
     <li><a href="">Classwork 2</a></li>
-    <li><a href="">Classwork 3</a></li>
+    <li><a href="class_exercise/grid/index.html">Classwork 3</a></li>
     <li><a href="">Classwork 4</a></li>
     <li><a href="">Classwork 5</a></li>
     <li><a href="">Classwork 6</a></li>
