--- a/index.html
+++ b/index.html
@@ -3,17 +3,26 @@
 <head>
   <meta charset="utf-8">
   <title>My Portfolio</title>
-  <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Dancing+Script' rel='stylesheet' type='text/css'>
+  <!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+  <link href='https://fonts.googleapis.com/css?family=Signika' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="style.css" media="screen" title="no title" charset="utf-8">
 </head>
 <body>
-  <div class="container">
-    <h1>Jen Cheng at FEWD!</h1>
-    <img src="me.jpg" alt="me" />
-  <div class="assignments">
-   <h2>List of Homework Assignments</h2>
-  <ul>
+  <!-- <div class="banner"></div> -->
+    <div class="container">
+
+      <!-- <img src="me.jpg" alt="me" /> -->
+
+      <div class="dropdown">
+        <button class="btn btn-default" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+    Dropdown
+    <span class="glyphicon glyphicon-list"></span>
+  </button>
+  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
     <li><a href="homework_1/Wendy_Bite.html">Homework 1</a></li>
     <li><a href="homework_2/hw2.html">Homework 2</a></li>
     <li><a href="">Homework 3</a></li>
@@ -21,10 +30,7 @@
     <li><a href="">Homework 5</a></li>
     <li><a href="">Homework 6</a></li>
     <li><a href="">Homework 7</a></li>
-  </ul>
-  <div class="divider"></div>
-    <h2>List of Classwork Assignments</h2>
-  <ul>
+    <li role="separator" class="divider"></li>
     <li><a href="class_exercise/cookies/cookies.html">Classwork 1</a></li>
     <li><a href="">Classwork 2</a></li>
     <li><a href="class_exercise/grid/index.html">Classwork 3</a></li>
@@ -33,7 +39,35 @@
     <li><a href="">Classwork 6</a></li>
     <li><a href="">Classwork 7</a></li>
   </ul>
-  </div>
-  </div>
+</div>
+<p class="text-center">Jennifer Cheng</p>
+      <!-- <div class="assignments">
+       <h2>List of Homework Assignments</h2>
+      <ul>
+        <li><a href="homework_1/Wendy_Bite.html">Homework 1</a></li>
+        <li><a href="homework_2/hw2.html">Homework 2</a></li>
+        <li><a href="">Homework 3</a></li>
+        <li><a href="">Homework 4</a></li>
+        <li><a href="">Homework 5</a></li>
+        <li><a href="">Homework 6</a></li>
+        <li><a href="">Homework 7</a></li>
+      </ul>
+      <div class="divider"></div>
+        <h2>List of Classwork Assignments</h2>
+      <ul>
+        <li><a href="class_exercise/cookies/cookies.html">Classwork 1</a></li>
+        <li><a href="">Classwork 2</a></li>
+        <li><a href="class_exercise/grid/index.html">Classwork 3</a></li>
+        <li><a href="">Classwork 4</a></li>
+        <li><a href="">Classwork 5</a></li>
+        <li><a href="">Classwork 6</a></li>
+        <li><a href="">Classwork 7</a></li>
+      </ul>
+      </div> -->
+    </div>
+    <script src="https://code.jquery.com/jquery-2.2.0.min.js">
+      </script>
+      <!-- Latest compiled and minified JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 </body>
 </html>
