--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <ul>
             <li><a href="homework_1/Wendy_Bite.html">Homework 1</a></li>
             <li><a href="homework_2/hw2.html">Homework 2</a></li>
-            <li><a href="">Homework 3</a></li>
+            <li><a href="homework_3/index.html">Homework 3</a></li>
             <li><a href="">Homework 4</a></li>
             <li><a href="">Homework 5</a></li>
             <li><a href="">Homework 6</a></li>
