--- a/homework_3/index.html
+++ b/homework_3/index.html
@@ -69,68 +69,46 @@
       <div class="container">
 
         <div class="row">
-          <div class="col-md-9"><div class="jumbotron">
-            <h1>Hello, world!</h1>
-            <p>This is homework #3 using bootstrap!</p>
-            <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+          <div class="col-sm-9">
+            <div class="jumbotron">
+                <h1>Hello, world!</h1>
+                <p>This is homework #3 using bootstrap!</p>
+                <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+            </div>
+            <div class="row">
+                <div class="col-sm-4 col-sm-4"><h3>Heading</h3><p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p><div class="btn-group" role="group" aria-label="..."><button type="button" class="btn btn-default">View Details >></button></div></div>
+                <div class="col-sm-4 col-sm-4"><h3>Heading</h3><p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p><div class="btn-group" role="group" aria-label="..."><button type="button" class="btn btn-default">View Details >></button></div></div>
+                <div class="col-sm-4 col-sm-4"><h3>Heading</h3><p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p><div class="btn-group" role="group" aria-label="..."><button type="button" class="btn btn-default">View Details >></button></div></div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4 col-sm-4"><h3>Heading</h3><p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p><div class="btn-group" role="group" aria-label="..."><button type="button" class="btn btn-default">View Details >></button></div></div>
+                <div class="col-sm-4 col-sm-4"><h3>Heading</h3><p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p><div class="btn-group" role="group" aria-label="..."><button type="button" class="btn btn-default">View Details >></button></div></div>
+                <div class="col-sm-4 col-sm-4"><h3>Heading</h3><p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p><div class="btn-group" role="group" aria-label="..."><button type="button" class="btn btn-default">View Details >></button></div></div>
             </div>
           </div>
-          <aside>
-            <div class="list-group">
-              <a href="#" class="list-group-item active">
-                Cras justo odio
-              </a>
-              <a href="#" class="list-group-item">Dapibus ac facilisis in</a>
-              <a href="#" class="list-group-item">Morbi leo risus</a>
-              <a href="#" class="list-group-item">Porta ac consectetur ac</a>
-              <a href="#" class="list-group-item">Vestibulum at eros</a>
-              <a href="#" class="list-group-item">
-                Cras justo odio
-              </a>
-              <a href="#" class="list-group-item">Dapibus ac facilisis in</a>
-              <a href="#" class="list-group-item">Morbi leo risus</a>
-              <a href="#" class="list-group-item">Porta ac consectetur ac</a>
-              <a href="#" class="list-group-item">Vestibulum at eros</a>
-              </div>
-          </aside>
-        </div>
-
-        <div class="row">
-          <div class="col-md-3"><h3>Heading</h3><p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p><div class="btn-group" role="group" aria-label="...">
-            <button type="button" class="btn btn-default">View Details >></button>
-          </div>
-          </div>
-          <div class="col-md-3"><h3>Heading</h3><p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p><div class="btn-group" role="group" aria-label="...">
-            <button type="button" class="btn btn-default">View Details >></button>
-          </div>
-          </div>
-          <div class="col-md-3"><h3>Heading</h3><p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
-            <div class="btn-group" role="group" aria-label="...">
-              <button type="button" class="btn btn-default">View Details >></button>
+          <div class="col-sm-3">
+              <div class="list-group">
+                <a href="#" class="list-group-item active">
+                  Cras justo odio
+                </a>
+                <a href="#" class="list-group-item">Dapibus ac facilisis in</a>
+                <a href="#" class="list-group-item">Morbi leo risus</a>
+                <a href="#" class="list-group-item">Porta ac consectetur ac</a>
+                <a href="#" class="list-group-item">Vestibulum at eros</a>
+                <a href="#" class="list-group-item">
+                  Cras justo odio
+                </a>
+                <a href="#" class="list-group-item">Dapibus ac facilisis in</a>
+                <a href="#" class="list-group-item">Morbi leo risus</a>
+                <a href="#" class="list-group-item">Porta ac consectetur ac</a>
+                <a href="#" class="list-group-item">Vestibulum at eros</a>
             </div>
           </div>
         </div>
-        <div class="row">
-          <div class="col-md-3"><h3>Heading</h3><p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p><div class="btn-group" role="group" aria-label="...">
-            <button type="button" class="btn btn-default">View Details >></button>
-          </div>
-          </div>
-          <div class="col-md-3"><h3>Heading</h3><p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p><div class="btn-group" role="group" aria-label="...">
-            <button type="button" class="btn btn-default">View Details >></button>
-          </div>
-          </div>
-          <div class="col-md-3"><h3>Heading</h3><p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p><div class="btn-group" role="group" aria-label="...">
-            <button type="button" class="btn btn-default">View Details >></button>
-          </div>
-          </div>
-
-
-
-
+          <div class="page-header"></div>
+          <footer>© 2015 Company, Inc.</footer>
         </div>
-        <div class="page-header"></div>
-        <footer>© 2015 Company, Inc.</footer>
-      </div>
+
 
     <script src="https://code.jquery.com/jquery-2.2.0.min.js">
     </script>
