--- a/homework_3/index.html
+++ b/homework_3/index.html
@@ -106,7 +106,7 @@
           </div>
         </div>
           <div class="page-header"></div>
-          <footer>© 2015 Company, Inc.</footer>
+          <footer>&copy; 2015 Company, Inc.</footer>
         </div>
 
 
