--- a/index.html
+++ b/index.html
@@ -15,89 +15,54 @@
     <link rel="stylesheet" href="style.css" media="screen" title="no title" charset="utf-8">
 </head>
 <body>
+  <div class="homepage-hero-module">
+      <div class="video-container">
+        <div class="container">
+          <p class="text-center">Jennifer Cheng</p>
+          <div class="menu">
+            <div class="hero-icon txt-center">
+              <div class="dropdown">
+                <span><i class="fa fa-bars"></i></span>
+                  <div class="dropdown-content">
+                    <ul>
+                      <li><a href="homework_1/Wendy_Bite.html">Homework 1</a></li>
+                      <li><a href="homework_2/hw2.html">Homework 2</a></li>
+                      <li><a href="homework_3/index.html">Homework 3</a></li>
+                      <li><a href="">Homework 4</a></li>
+                      <li><a href="">Homework 5</a></li>
+                      <li><a href="">Homework 6</a></li>
+                      <li><a href="">Homework 7</a></li>
+                      <li role="separator" class="divider"></li>
+                      <li><a href="class_exercise/cookies/cookies.html">Classwork 1</a></li>
+                      <li><a href="">Classwork 2</a></li>
+                      <li><a href="class_exercise/grid/index.html">Classwork 3</a></li>
+                      <li><a href="">Classwork 4</a></li>
+                      <li><a href="">Classwork 5</a></li>
+                      <li><a href="">Classwork 6</a></li>
+                      <li><a href="">Classwork 7</a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+        </div>
+
+          <!-- <div class="filter"></div> -->
+          <video autoplay loop class="fillWidth">
+              <source src="Aloha-Mundo/MP4/Aloha-Mundo.mp4" type="video/mp4" />
+          </video>
+
+      </div>
+  </div>
 
   <!-- <div class="banner"></div> -->
-    <div class="container">
-      <div class="hero-icon txt-center">
 
-      <div class="dropdown">
-        <span><i class="fa fa-bars"></i></span>
-        <div class="dropdown-content">
-          <ul>
-            <li><a href="homework_1/Wendy_Bite.html">Homework 1</a></li>
-            <li><a href="homework_2/hw2.html">Homework 2</a></li>
-            <li><a href="homework_3/index.html">Homework 3</a></li>
-            <li><a href="">Homework 4</a></li>
-            <li><a href="">Homework 5</a></li>
-            <li><a href="">Homework 6</a></li>
-            <li><a href="">Homework 7</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="class_exercise/cookies/cookies.html">Classwork 1</a></li>
-            <li><a href="">Classwork 2</a></li>
-            <li><a href="class_exercise/grid/index.html">Classwork 3</a></li>
-            <li><a href="">Classwork 4</a></li>
-            <li><a href="">Classwork 5</a></li>
-            <li><a href="">Classwork 6</a></li>
-            <li><a href="">Classwork 7</a></li>
-          </ul>
-        </div>
-      </div>
-      </div>
-      <!-- <img src="me.jpg" alt="me" /> -->
-
-      <!-- <div class="dropdown">
-        <button class="btn btn-default" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-    Dropdown
-    <span class="glyphicon glyphicon-list"></span>
-  </button>
-  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-    <li><a href="homework_1/Wendy_Bite.html">Homework 1</a></li>
-    <li><a href="homework_2/hw2.html">Homework 2</a></li>
-    <li><a href="">Homework 3</a></li>
-    <li><a href="">Homework 4</a></li>
-    <li><a href="">Homework 5</a></li>
-    <li><a href="">Homework 6</a></li>
-    <li><a href="">Homework 7</a></li>
-    <li role="separator" class="divider"></li>
-    <li><a href="class_exercise/cookies/cookies.html">Classwork 1</a></li>
-    <li><a href="">Classwork 2</a></li>
-    <li><a href="class_exercise/grid/index.html">Classwork 3</a></li>
-    <li><a href="">Classwork 4</a></li>
-    <li><a href="">Classwork 5</a></li>
-    <li><a href="">Classwork 6</a></li>
-    <li><a href="">Classwork 7</a></li>
-  </ul>
-</div> -->
-    <p class="text-center">Jennifer Cheng</p>
-
-  </div>
-      <!-- <div class="assignments">
-       <h2>List of Homework Assignments</h2>
-      <ul>
-        <li><a href="homework_1/Wendy_Bite.html">Homework 1</a></li>
-        <li><a href="homework_2/hw2.html">Homework 2</a></li>
-        <li><a href="">Homework 3</a></li>
-        <li><a href="">Homework 4</a></li>
-        <li><a href="">Homework 5</a></li>
-        <li><a href="">Homework 6</a></li>
-        <li><a href="">Homework 7</a></li>
-      </ul>
-      <div class="divider"></div>
-        <h2>List of Classwork Assignments</h2>
-      <ul>
-        <li><a href="class_exercise/cookies/cookies.html">Classwork 1</a></li>
-        <li><a href="">Classwork 2</a></li>
-        <li><a href="class_exercise/grid/index.html">Classwork 3</a></li>
-        <li><a href="">Classwork 4</a></li>
-        <li><a href="">Classwork 5</a></li>
-        <li><a href="">Classwork 6</a></li>
-        <li><a href="">Classwork 7</a></li>
-      </ul>
-      </div> -->
-    </div>
-    <script src="https://code.jquery.com/jquery-2.2.0.min.js">
+      <script src="https://code.jquery.com/jquery-2.2.0.min.js">
       </script>
       <!-- Latest compiled and minified JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+  <script src="script.js">
+
+  </script>
 </body>
 </html>
