--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
                       <li><a href="homework_1/Wendy_Bite.html">Homework 1</a></li>
                       <li><a href="homework_2/hw2.html">Homework 2</a></li>
                       <li><a href="homework_3/index.html">Homework 3</a></li>
-                      <li><a href="">Homework 4</a></li>
+                      <li><a href="homework_4/script.js">Homework 4 Part 1 & 2 (loops and max)</a></li>
+                      <li><a href="homework_4/TicTacToe-master/index.html">Homework 4 Part 3 (TicTacToe)</a></li>
                       <li><a href="">Homework 5</a></li>
                       <li><a href="">Homework 6</a></li>
                       <li><a href="">Homework 7</a></li>
