--- a/formulas-Javascript_day1/index.html
+++ b/formulas-Javascript_day1/index.html
@@ -43,8 +43,8 @@
         return (fahrenheit*(9/5)+32);
       }
       // radius to circumference
-      function calcCircumference(r){
-        return (2*Math.PI*r);
+      function calcCircumference(radius){
+        return (2*Math.PI*radius);
       }
       // Pythagorean theorem
       function calcLongestSide(a,b){
