created image function

--- a/lab4_dom_manipulation/dom_manipulation_starting.html
+++ b/lab4_dom_manipulation/dom_manipulation_starting.html
@@ -50,7 +50,13 @@ body { font-family: sans-serif; }
 
   <script>
  //create a function called addImage here
-
+function addImage(){
+  var userImage = prompt("Add image source, width, height here!");
+  var image = document.createElement("img");
+  image.textContent = userImage;
+  var imageParent = document.querySelector("#image");
+  parent.appendChild(image);
+}
   </script>
 </div>
 
