--- a/lab4_dom_manipulation/dom_manipulation_starting.html
+++ b/lab4_dom_manipulation/dom_manipulation_starting.html
@@ -56,8 +56,8 @@ function addImage(){
   var userImageHeight = prompt("Add image Height!");
   var image = document.createElement("img");
   image.setAttribute("src",userImage);
-  image.setAttribute("class",userImageWidth);
-  image.setAttribute("class",userImageHeight);
+  image.setAttribute("width",userImageWidth);
+  image.setAttribute("height",userImageHeight);
   var imageParent = document.querySelector("#image");
   imageParent.appendChild(image);
 }
@@ -79,13 +79,14 @@ function addImage(){
 
   <script>
   //create a function called makeBold here
-    var boldparagraph = document.querySelector("#make-me-bold");
-    // var boldtoggle = document.querySelector(.makeBold);
+    // var boldparagraph = document.querySelector("#make-me-bold");
+    // var boldtoggle = document.querySelector(makeBold());
     function makeBold(){
-    boldparagraph.className = "bold";
-    // boldtoggle.className = "bold";
+    // boldparagraph.className = "bold";
+    // // boldtoggle.className = "bold";
+    document.querySelector("#make-me-bold").classList.toggle("bold");
   }
-    boldparagraph.addEventListener('click',makeBold);
+    // boldparagraph.addEventListener('click',makeBold);
     // boldtoggle.addEventListener('click',makeToggleBold);
 
   </script>
