--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                       <li><a href="homework_4/script.js">Homework 4 Part 1 & 2 (loops and max)</a></li>
                       <li><a href="homework_4/TicTacToe-master/index.html">Homework 4 Part 3 (TicTacToe)</a></li>
                       <li><a href="lab4_dom_manipulation/dom_manipulation_starting.html">Homework 5</a></li>
-                      <li><a href="">Homework 6</a></li>
+                      <li><a href="homework_5/gettysburg_address/index.html">Homework 6</a></li>
                       <li><a href="">Homework 7</a></li>
                       <li role="separator" class="divider"></li>
                       <li><a href="class_exercise/cookies/cookies.html">Classwork 1</a></li>
