--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
         </div>
 
           <!-- <div class="filter"></div> -->
-          <video autoplay loop class="fillWidth">
+          <!-- <video autoplay loop class="fillWidth">
               <source src="Aloha-Mundo/MP4/Aloha-Mundo.mp4" type="video/mp4" />
-          </video>
+          </video> -->
 
       </div>
   </div>
