--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <link rel="stylesheet" href="style.css" media="screen" title="no title" charset="utf-8">
 </head>
 <body>
-  <div class="homepage-hero-module">
-      <div class="video-container">
+  <!-- <div class="homepage-hero-module">
+      <div class="video-container"> -->
         <div class="container">
           <p class="text-center">Jennifer Cheng</p>
           <div class="menu">
@@ -53,8 +53,8 @@
               <source src="Aloha-Mundo/MP4/Aloha-Mundo.mp4" type="video/mp4" />
           </video> -->
 
-      </div>
-  </div>
+      <!-- </div>
+  </div> -->
 
   <!-- <div class="banner"></div> -->
 
@@ -62,7 +62,7 @@
       </script>
       <!-- Latest compiled and minified JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-  <script src="script.js">
+  <!-- <script src="script.js"> -->
 
   </script>
 </body>
