--- a/final_project/index.html
+++ b/final_project/index.html
@@ -14,17 +14,36 @@
     <div class="container">
       <h1>What would you like to eat?</h1>
         <div class="row">
-          <div class="col-md-4" id="Box1">Find</div>
-          <div class="col-md-4" id="Box2">Neighborhood</div>
-          <div class="col-md-4" id="Box3">Price</div>
+          <div class="col-md-4" >
+            <select id="Box1">
+              <option selected="selected">I'm in the mood for...</option>
+              <option>Cheap Gourmet</option>
+              <option>Quick Lunch</option>
+              <option>Hipster</option>
+            </select>
+          </div>
+          <div class="col-md-4" >
+            <select id="Box2">
+              <option selected = "selected"> ...in this area...</option>
+              <option>FIDA</option>
+              <option>SOMA</option>
+              <option>North Beach</option>
+            </select>
+          </div>
+          <div class="col-md-4">
+            <select id="Box3">
+              <option selected = "selected">...and $$$ ain't a thang!</option>
+              <option>$</option>
+              <option>$$</option>
+              <option>$$$</option>
+            </select>
+          </div>
         </div>
     </div>
-    <script src="text/javascript">https://code.jquery.com/jquery-2.2.0.min.js</script>
+    <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-    <script src="script/js">
-
-    </script>
+    <script src="script.js"></script>
 
   </body>
 </html>
