--- a/final_project/index.html
+++ b/final_project/index.html
@@ -14,32 +14,50 @@
     <div class="container">
       <h1>What would you like to eat?</h1>
         <div class="row">
-          <div class="col-md-4" >
-            <select id="Box1">
-              <option selected="selected">I'm in the mood for...</option>
-              <option>Cheap Gourmet</option>
-              <option>Quick Lunch</option>
-              <option>Hipster</option>
-            </select>
+            <div class="col-md-4">
+              <section class="main">
+				            <div class="wrapper">
+                        <div class="wrapper-dropdown-1" id="dd1" tabindex="1">
+                          <span>I'm in the mood for...</span>
+                          	<ul class="dropdown">
+                          		<li><a href="#">Cheap Gourmet</a></li>
+                          		<li><a href="#">Quick Lunch</a></li>
+                          		<li><a href="#">Hipster</a></li>
+                          	</ul>
+                          </div>
+                        </div>
+                </section>
+              </div>
+            <div class="col-md-4">
+                <section class="main">
+				            <div class="wrapper">
+                        <div class="wrapper-dropdown-1" id="dd2" tabindex="1">
+                        	<span>...in this area...</span>
+                          	<ul class="dropdown">
+                          		<li> <a href="#">FIDA</a></li>
+                          		<li><a href="#">SOMA</a></li>
+                          		<li><a href="#">North Beach</a></li>
+                          	</ul>
+                        </div>
+                    </div>
+                  </section>
+              </div>
+              <div class="col-md-4">
+                <section class="main">
+				            <div class="wrapper">
+                        <div class="wrapper-dropdown-1" id="dd3" tabindex="1">
+                          <span>...and $$$ ain't a thang!</span>
+                          	<ul class="dropdown">
+                          		<li> <a href="#">$</a></li>
+                          		<li><a href="#">$$</a></li>
+                          		<li><a href="#">$$$</a></li>
+                          	</ul>
+                        </div>
+                    </div>
+                </section>
+              </div>
           </div>
-          <div class="col-md-4" >
-            <select id="Box2">
-              <option selected = "selected"> ...in this area...</option>
-              <option>FIDA</option>
-              <option>SOMA</option>
-              <option>North Beach</option>
-            </select>
-          </div>
-          <div class="col-md-4">
-            <select id="Box3">
-              <option selected = "selected">...and $$$ ain't a thang!</option>
-              <option>$</option>
-              <option>$$</option>
-              <option>$$$</option>
-            </select>
-          </div>
-        </div>
-    </div>
+      </div>
     <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
