--- a/final_project/index.html
+++ b/final_project/index.html
@@ -57,6 +57,13 @@
                 </section>
               </div>
           </div>
+          <div class="row">
+              <!-- <div class="col-md-4"></div> -->
+              <div class="col-md-4">
+                <button type="button" class="btn btn-info active">Tell me where to go!</button>
+              </div>
+              <!-- <div class="col-md-4"></div> -->
+          </div>
       </div>
     <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
