--- a/final_project/index.html
+++ b/final_project/index.html
@@ -34,7 +34,7 @@
                         <div class="wrapper-dropdown-1" id="dd2" tabindex="1">
                         	<span>...in this area...</span>
                           	<ul class="dropdown">
-                          		<li> <a href="#">FIDA</a></li>
+                          		<li> <a href="#">FIDI</a></li>
                           		<li><a href="#">SOMA</a></li>
                           		<li><a href="#">North Beach</a></li>
                           	</ul>
