--- a/final_project/index.html
+++ b/final_project/index.html
@@ -11,8 +11,22 @@
     <title>Lunch Genie</title>
   </head>
   <body>
+    <!-- <div class="homepage-hero-module">
+        <div class="video-container">
+            <div class="filter"></div>
+            <video autoplay loop class="fillWidth">
+                <source src="Blue-Bottle/MP4/Blue-Bottle.mp4" type="video/mp4" />Your browser does not support the video tag. I suggest you upgrade your browser.
+                <source src="Blue-Bottle/WEBM/Blue-Bottle.webm" type="video/webm" />Your browser does not support the video tag. I suggest you upgrade your browser.
+            </video>
+            <div class="poster hidden">
+                <img src="Blue-Bottle/Snapshots/Blue-Bottle.jpg" alt="">
+            </div>
+        </div>
+    </div> -->
     <div class="container">
+
       <h1>What would you like to eat?</h1>
+      <form id="dropdownValues">
         <div class="row">
             <div class="col-md-4">
               <section class="main">
@@ -60,10 +74,11 @@
         <div class="row">
             <!-- <div class="col-xs-4 col-centered">1</div> -->
             <div class=".col-md-6">
-            <button type="button" class="btn btn-info active">Tell me where to go!</button>
+            <button type="submit" class="btn btn-info active">Tell me where to go!</button>
             </div>
             <!-- <div class="col-xs-4 col-centered">3</div> -->
         </div>
+      </form>
       </div>
     <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
