--- a/final_project/index.html
+++ b/final_project/index.html
@@ -11,7 +11,7 @@
     <title>Lunch Genie</title>
   </head>
   <body>
-    <!-- <div class="homepage-hero-module">
+    <!--<div class="homepage-hero-module">
         <div class="video-container">
             <div class="filter"></div>
             <video autoplay loop class="fillWidth">
@@ -22,68 +22,34 @@
                 <img src="Blue-Bottle/Snapshots/Blue-Bottle.jpg" alt="">
             </div>
         </div>
-    </div> -->
+        </div> -->
     <div class="container">
+      <h1>Where's lunch?</h1>
+        <form id="restaurant-search">
+          <input type="text" id="query" placeholder="I.E: New American, Mexican Fusion">
+          <button type="submit">Go!</button>
+        </form>
 
-      <h1>What would you like to eat?</h1>
-      <form id="dropdownValues">
-        <div class="row">
-            <div class="col-md-4">
-              <section class="main">
-				            <div class="wrapper">
-                        <div class="wrapper-dropdown-1" id="dd1" tabindex="1">
-                          <span>I'm in the mood for...</span>
-                          	<ul class="dropdown">
-                          		<li><a href="#">Cheap Gourmet</a></li>
-                          		<li><a href="#">Quick Lunch</a></li>
-                          		<li><a href="#">Hipster</a></li>
-                          	</ul>
-                          </div>
-                        </div>
-                </section>
+        <ul id="restaurants">
+          <!-- <li class ="restaurant">
+              <div class="restaurant-title">
+                <a href="#">
+                  Super Duper
+                </a>
               </div>
-            <div class="col-md-4">
-                <section class="main">
-				            <div class="wrapper">
-                        <div class="wrapper-dropdown-1" id="dd2" tabindex="1">
-                        	<span>...in this area...</span>
-                          	<ul class="dropdown">
-                          		<li> <a href="#">FIDI</a></li>
-                          		<li><a href="#">SOMA</a></li>
-                          		<li><a href="#">North Beach</a></li>
-                          	</ul>
-                        </div>
-                    </div>
-                  </section>
-              </div>
-              <div class="col-md-4">
-                <section class="main">
-				            <div class="wrapper">
-                        <div class="wrapper-dropdown-1" id="dd3" tabindex="1">
-                          <span>...and $$$ ain't a thang!</span>
-                          	<ul class="dropdown">
-                          		<li> <a href="#">$</a></li>
-                          		<li><a href="#">$$</a></li>
-                          		<li><a href="#">$$$</a></li>
-                          	</ul>
-                        </div>
-                    </div>
-                </section>
-              </div>
-        </div>
-        <div class="row">
-            <!-- <div class="col-xs-4 col-centered">1</div> -->
-            <div class=".col-md-6">
-            <button type="submit" class="btn btn-info active">Tell me where to go!</button>
-            </div>
-            <!-- <div class="col-xs-4 col-centered">3</div> -->
-        </div>
-      </form>
-      </div>
-    <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
+          </li> -->
+        </ul>
+
+    </div>
+
+      <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
+      <!-- Latest compiled and minified JavaScript -->
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+      <script src="script.js"></script>
+
+
+
+
 
   </body>
 </html>
