--- a/review_omdbapi-lab/index.html
+++ b/review_omdbapi-lab/index.html
@@ -32,6 +32,6 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
-    <script src="main.js"></script>
+    <script src=main.js"></script>
   </body>
 </html>
