--- a/final_project 2/index.html
+++ b/final_project 2/index.html
@@ -32,16 +32,16 @@
     <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
 
       <!-- Indicators -->
-      <ol class="carousel-indicators">
+      <!-- <ol class="carousel-indicators">
         <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
         <li data-target="#carousel-example-generic" data-slide-to="1"></li>
         <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-      </ol>
+      </ol> -->
 
       <!-- Wrapper for slides -->
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-          <img src="champagne.jpg" alt="...">
+          <img src="topview.jpg" alt="...">
           <div class="carousel-caption">
 
           </div>
